--- a/Finance tracker/server/package.json
+++ b/Finance tracker/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./build/index.ts",
+    "build": "tsc-p .",
+    "dev": "nodemon ./src/index.ts"
   },
   "keywords": [],
   "author": "",
